--- a/wp-content/themes/csm-mobile/assets/css/main.scss
+++ b/wp-content/themes/csm-mobile/assets/css/main.scss
@@ -288,32 +288,32 @@ textarea {
 /**********************************************************************************************************************/
 @font-face {
   font-family: Rubik-Light;
-  src: url(../fonts/Rubik-Light.eot);
-  src: url(../fonts/Rubik-Light.eot?#iefix) format("embedded-opentype"), url(../fonts/Rubik-Light.woff) format("woff"), url(../fonts/Rubik-Light.ttf) format("truetype"), url(../fonts/Rubik-Light.svg#Rubik-Light) format("svg");
+  src: url(../../../../uploads/fonts/Rubik-Light.eot);
+  src: url(../../../../uploads/fonts/Rubik-Light.eot?#iefix) format("embedded-opentype"), url(../../../../uploads/fonts/Rubik-Light.woff) format("woff"), url(../../../../uploads/fonts/Rubik-Light.ttf) format("truetype"), url(../../../../uploads/fonts/Rubik-Light.svg#Rubik-Light) format("svg");
   font-weight: 300;
   font-style: normal
 }
 
 @font-face {
   font-family: Rubik-Medium;
-  src: url(../fonts/Rubik-Medium.eot);
-  src: url(../fonts/Rubik-Medium.eot?#iefix) format("embedded-opentype"), url(../fonts/Rubik-Medium.woff) format("woff"), url(../fonts/Rubik-Medium.ttf) format("truetype"), url(../fonts/Rubik-Medium.svg#Rubik-Medium) format("svg");
+  src: url(../../../../uploads/fonts/Rubik-Medium.eot);
+  src: url(../../../../uploads/fonts/Rubik-Medium.eot?#iefix) format("embedded-opentype"), url(../../../../uploads/fonts/Rubik-Medium.woff) format("woff"), url(../../../../uploads/fonts/Rubik-Medium.ttf) format("truetype"), url(../../../../uploads/fonts/Rubik-Medium.svg#Rubik-Medium) format("svg");
   font-weight: 500;
   font-style: normal
 }
 
 @font-face {
   font-family: Rubik-Bold;
-  src: url(../fonts/Rubik-Bold.eot);
-  src: url(../fonts/Rubik-Bold.eot?#iefix) format("embedded-opentype"), url(../fonts/Rubik-Bold.woff) format("woff"), url(../fonts/Rubik-Bold.ttf) format("truetype"), url(../fonts/Rubik-Bold.svg#Rubik-Bold) format("svg");
+  src: url(../../../../uploads/fonts/Rubik-Bold.eot);
+  src: url(../../../../uploads/fonts/Rubik-Bold.eot?#iefix) format("embedded-opentype"), url(../../../../uploads/fonts/Rubik-Bold.woff) format("woff"), url(../../../../uploads/fonts/Rubik-Bold.ttf) format("truetype"), url(../../../../uploads/fonts/Rubik-Bold.svg#Rubik-Bold) format("svg");
   font-weight: 700;
   font-style: normal
 }
 
 @font-face {
   font-family: Rubik;
-  src: url(../fonts/Rubik-Regular.eot);
-  src: url(../fonts/Rubik-Regular.eot?#iefix) format("embedded-opentype"), url(../fonts/Rubik-Regular.woff) format("woff"), url(../fonts/Rubik-Regular.ttf) format("truetype"), url(../fonts/Rubik-Regular.svg#Rubik-Regular) format("svg");
+  src: url(../../../../uploads/fonts/Rubik-Regular.eot);
+  src: url(../../../../uploads/fonts/Rubik-Regular.eot?#iefix) format("embedded-opentype"), url(../../../../uploads/fonts/Rubik-Regular.woff) format("woff"), url(../../../../uploads/fonts/Rubik-Regular.ttf) format("truetype"), url(../../../../uploads/fonts/Rubik-Regular.svg#Rubik-Regular) format("svg");
   font-weight: 400;
   font-style: normal
 }
@@ -441,7 +441,9 @@ body {
   grid-row-end: 3;
 }
 /*-------*/
-
+a:focus, a:active, input[type=submit]{
+  outline: none;
+}
 .social-links {
   margin: 0;
   padding: 0;
@@ -452,7 +454,9 @@ body {
     list-style: none;
     line-height: 0;
     margin-right:11px;
-
+    &:last-child{
+      margin-right: 0;
+    }
     a {
       display: inline-block;
       border-bottom: none;
@@ -460,28 +464,31 @@ body {
     }
 
     .ico-wh {
-      background: url('../images/whatsapp-glyph-white.svg') 0 0 no-repeat;background-size: 25px 25px;
-      width: 25px;
-      height: 25px;
+      background: url('../images/whatsapp-glyph-white.svg') 0 0 no-repeat;
+      background-size: contain;
+      width: 30px;
+      height: 30px;
     }
 
     .ico-vb {
       background: url('../images/viber-white.svg') 0 0 no-repeat;
-      background-size: 25px 25px;
-      width: 25px;
-      height: 25px;
+      background-size: contain;
+      width: 30px;
+      height: 30px;
     }
 
     .ico-tg {
       background: url('../images/telegram-white.svg') 0 0 no-repeat;
-      background-size: 25px 25px;
-      width: 25px;
-      height: 25px;
+      background-size: contain;
+      width: 30px;
+      height: 30px;
     }
 
   }
 }
-
+.contact-block .b3 .ico-tel{
+  line-height: 20px;
+}
 .section2{
   .pic-mobile .social-links{
     opacity: 0.7;
@@ -490,9 +497,9 @@ body {
     display: inline-flex;
      li{
       margin-top: 10px;
-      .ico-wh{background: url('../images/whatsapp-glyph-white.svg') 0 0 no-repeat;background-size: 25px 25px;}
-      .ico-vb {   background: url('../images/viber-white.svg') 0 0 no-repeat; background-size: 25px 25px; }
-      .ico-tg {    background: url('../images/telegram-white.svg') 0 0 no-repeat;background-size: 25px 25px;}
+      .ico-wh{background: url('../images/whatsapp-glyph-white.svg') 0 0 no-repeat;background-size: 30px 30px;}
+      .ico-vb {   background: url('../images/viber-white.svg') 0 0 no-repeat; background-size: 30px 30px; }
+      .ico-tg {    background: url('../images/telegram-white.svg') 0 0 no-repeat;background-size: 30px 30px;}
       &:last-child{
         margin-right: 0;
       }
@@ -1194,7 +1201,8 @@ span.wpcf7-not-valid-tip {
     a{
       color: #fff;
       text-decoration: none;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
+      line-height: 20px;
     }
   }
 .flex.contacts{
@@ -1216,6 +1224,11 @@ span.wpcf7-not-valid-tip {
 #popupmenu{
   .tels_group{
     flex-direction: row;
+    a{
+      &:focus, &:active{
+        outline: none;
+      }
+    }
     a:last-child{
       margin-left: 30px;
     }
@@ -1488,6 +1501,9 @@ body{
   #site-footer .line2 .copy{
     max-width: 170px;
   }
+  .topcontacts .btn{
+    margin-top: 8px;
+  }
 }
 @media (min-width: 372px) {
   .in{
@@ -1513,7 +1529,7 @@ body{
     height: 80px;
   }
   .topcontacts .btn{
-    margin-top: 5px;
+    margin-top: 20px;
   }
   .landbg{
     padding-bottom: 20px;
